apps/kubernetes/services/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-service-ingress
  namespace: auth-service
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /auth-service(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: app-auth-service
                port:
                  number: 8001
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flag-service-ingress
  namespace: flag-service
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /flag-service(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: app-flag-service
                port:
                  number: 8002
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: targeting-service-ingress
  namespace: targeting-service
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /targeting-service(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: app-targeting-service
                port:
                  number: 8003
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: evaluation-service-ingress
  namespace: evaluation-service
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /evaluation-service(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: app-evaluation-service
                port:
                  number: 8004
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: analytics-service-ingress
  namespace: analytics-service
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /analytics-service(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: app-analytics-service
                port:
                  number: 8005
